fixed overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,11 @@ body {
   color: var(--foreground);
   font-family: var(--font-body-custom);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23111111' fill-opacity='0.04' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 .font-serif-display {
